FLY wire David/force-app/main/default/objects/Contact/fields/MQL_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>MQL_Campaign_Touch__c</fullName>
    <description>Last Campaign engaged with at MQL.</description>
    <label>MQL Campaign Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>