FLY wire David/force-app/main/default/objects/Contact/fields/MQL_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>MQL_Timestamp__c</fullName>
    <description>Must keep field to not lose current data. Plan to delete by August 31. Field to capture the date that a lead status changes to an MQL so we can capture the amount of time it takes to get to MQL.</description>
    <label>OBS_MQL Date</label>
    <type>Date</type>
</CustomField>