FLY wire David/force-app/main/default/objects/Contact/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <description>Created from JIRA ticket: BOPI-274. Updated with SALDEV-1334 to make unique</description>
    <label>Netsuite ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>