FLY wire David/force-app/main/default/objects/Contact/fields/Nurture_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Follow_Up_Date__c</fullName>
    <description>This field is manually populated by the Sales/RM/CS teams to set a date that they should follow up with a stale record OR follow up with a record who was not ready to begin conversations with Flywire at a certain time.
An email alert will be triggered from Marketo on the date set by the Sales team. SAL-4910</description>
    <inlineHelpText>This field is manually populated by the Sales/RM/CS teams to set a date that they should follow up with a stale record OR follow up with a record who was not ready to begin conversations with Flywire at a certain time.
An email alert will be triggered from Marketo on the date set by the Sales team.</inlineHelpText>
    <label>Nurture Follow Up Date</label>
    <type>Date</type>
</CustomField>