FLY wire David/force-app/main/default/objects/Contact/fields/Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID in previous Salesforce system</description>
    <externalId>true</externalId>
    <label>Old ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>