FLY wire David/force-app/main/default/objects/Contact/fields/Opportunity_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Campaign_Touch__c</fullName>
    <description>The Last Campaign the person engaged with when the Opportunity was opened.</description>
    <inlineHelpText>The Last Campaign the person engaged with when the Opportunity was opened.</inlineHelpText>
    <label>Opportunity Campaign Touch</label>
    <type>TextArea</type>
</CustomField>