FLY wire David/force-app/main/default/objects/Contact/fields/Opportunity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Date_Time__c</fullName>
    <description>The date of the most recent engaged campaign in relation to the Opportunity on the person&apos;s record.</description>
    <inlineHelpText>The date of the most recent engaged campaign in relation to the Opportunity on the person&apos;s record.</inlineHelpText>
    <label>Opportunity Date Time</label>
    <type>DateTime</type>
</CustomField>