FLY wire David/force-app/main/default/objects/Contact/fields/Opt_Out_Acquiring_Topics__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Acquiring_Topics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Opted out of email: Acquiring Topics</description>
    <inlineHelpText>WPMO Opted out of email: Acquiring Topics</inlineHelpText>
    <label>Opt Out: Acquiring Topics</label>
    <type>Checkbox</type>
</CustomField>