FLY wire David/force-app/main/default/objects/Contact/fields/Opt_Out_Blog_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Blog_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opted out of email: WPM Blog Subscription (English)</description>
    <inlineHelpText>Opted out of email: WPM Blog Subscription (English)</inlineHelpText>
    <label>Opt Out: Blog Subscription</label>
    <type>Checkbox</type>
</CustomField>