FLY wire David/force-app/main/default/objects/Contact/fields/Opt_Out_Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Customer_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Opted out of email: Customer Service</description>
    <inlineHelpText>WPM Opted out of email: Customer Service</inlineHelpText>
    <label>Opt Out: Customer Service</label>
    <type>Checkbox</type>
</CustomField>