FLY wire David/force-app/main/default/objects/Contact/fields/Opt_Out_Intl_Payments__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Intl_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Opted out of email: International Payments</description>
    <inlineHelpText>WPM Opted out of email: International Payments</inlineHelpText>
    <label>Opt Out: Intl Payments</label>
    <type>Checkbox</type>
</CustomField>