FLY wire David/force-app/main/default/objects/Contact/fields/Opt_Out_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opted out of email: WPM Newsletter</description>
    <inlineHelpText>Opted out of email: WPM Newsletter</inlineHelpText>
    <label>Opt Out: Newsletter</label>
    <type>Checkbox</type>
</CustomField>