FLY wire David/force-app/main/default/objects/Contact/fields/Opt_Out_One_to_One__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_One_to_One__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Opted out of email: One to One</description>
    <inlineHelpText>WPM Opted out of email: One to One</inlineHelpText>
    <label>Opt Out: One to One</label>
    <type>Checkbox</type>
</CustomField>