FLY wire David/force-app/main/default/objects/Contact/fields/Opt_Out_Payment_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Payment_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Opted out of email: Payment Acceptance</description>
    <inlineHelpText>WPM Opted out of email: Payment Acceptance</inlineHelpText>
    <label>Opt Out: Payment Acceptance</label>
    <type>Checkbox</type>
</CustomField>