FLY wire David/force-app/main/default/objects/Contact/fields/Opt_Out_Payment_Security__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Payment_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Opted Out of email: Payment Security</description>
    <inlineHelpText>WPM Opted Out of email: Payment Security</inlineHelpText>
    <label>Opt Out: Payment Security</label>
    <type>Checkbox</type>
</CustomField>