FLY wire David/force-app/main/default/objects/Contact/fields/Opt_Out_Strategic_Thought_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Strategic_Thought_Leadership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Opted out of email: Strategic Thought Leadership</description>
    <inlineHelpText>WPM Opted out of email: Strategic Thought Leadership</inlineHelpText>
    <label>Opt Out: Strategic Thought Leadership</label>
    <type>Checkbox</type>
</CustomField>