FLY wire David/force-app/main/default/objects/Contact/fields/Owner_Same_as_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Same_as_Account__c</fullName>
    <description>Returns True (checked) if the Account Owner and the Contact Owner are the same. SAL-3207</description>
    <formula>OwnerId = Account.OwnerId</formula>
    <inlineHelpText>Returns True (checked) if the Account Owner and the Contact Owner are the same. SAL-3207</inlineHelpText>
    <label>Owner Same as Account?</label>
    <type>Checkbox</type>
</CustomField>