FLY wire David/force-app/main/default/objects/Contact/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Select the partner type so marketing and sales know if this is for sales partnerships or global payments partnerships.</description>
    <label>OBS Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking Partner</fullName>
            </value>
            <value>
                <fullName>Payment Service Provider</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>