FLY wire David/force-app/main/default/objects/Contact/fields/Payment_Acceptance_Role__c.field-meta.xml
<CustomField>
    <fullName>Payment_Acceptance_Role__c</fullName>
    <description>WPM Payment Acceptance Role</description>
    <inlineHelpText>WPM Payment Acceptance Role</inlineHelpText>
    <label>Payment Acceptance Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Secondary Contact</fullName>
            </value>
            <value>
                <fullName>Contractual Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>