FLY wire David/force-app/main/default/objects/Contact/fields/Payment_Security_Role__c.field-meta.xml
<CustomField>
    <fullName>Payment_Security_Role__c</fullName>
    <description>WPM Payment Security Role</description>
    <inlineHelpText>WPM Payment Security Role</inlineHelpText>
    <label>Payment Security Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCI ISA</fullName>
            </value>
            <value>
                <fullName>PCI ISA (Lapsed)</fullName>
            </value>
            <value>
                <fullName>Internal Auditor</fullName>
            </value>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Secondary Contact</fullName>
            </value>
            <value>
                <fullName>Contractual Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>