FLY wire David/force-app/main/default/objects/Contact/fields/Payment_Security_Training__c.field-meta.xml
<CustomField>
    <fullName>Payment_Security_Training__c</fullName>
    <description>WPM Payment Security Training</description>
    <inlineHelpText>WPM Payment Security Training</inlineHelpText>
    <label>Payment Security Training</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Security Foundation 2021</fullName>
            </value>
            <value>
                <fullName>Payment Security Foundation 2022</fullName>
            </value>
            <value>
                <fullName>Payment Security Internal Auditor 2022</fullName>
            </value>
            <value>
                <fullName>Payment Security Masterclass 2021</fullName>
            </value>
            <value>
                <fullName>Payment Security Masterclass 2022</fullName>
            </value>
            <value>
                <fullName>Payment Security Practitioner 2021</fullName>
            </value>
            <value>
                <fullName>Payment Security Practitioner 2022</fullName>
            </value>
            <value>
                <fullName>Payment Security V4 Conversion 2022</fullName>
            </value>
            <value>
                <fullName>PCI Foundation 2017</fullName>
            </value>
            <value>
                <fullName>PCI Foundation 2018</fullName>
            </value>
            <value>
                <fullName>PCI Foundation 2019</fullName>
            </value>
            <value>
                <fullName>PCI Foundation 2020</fullName>
            </value>
            <value>
                <fullName>PCI Foundation 2021</fullName>
            </value>
            <value>
                <fullName>PCI ISA 2017</fullName>
            </value>
            <value>
                <fullName>PCI ISA 2018</fullName>
            </value>
            <value>
                <fullName>PCI ISA 2019</fullName>
            </value>
            <value>
                <fullName>PCI ISA 2020</fullName>
            </value>
            <value>
                <fullName>PCI ISA 2021</fullName>
            </value>
            <value>
                <fullName>PCI ISA 2022</fullName>
            </value>
            <value>
                <fullName>PCI Practitioner 2017</fullName>
            </value>
            <value>
                <fullName>PCI Practitioner 2018</fullName>
            </value>
            <value>
                <fullName>PCI Practitioner 2019</fullName>
            </value>
            <value>
                <fullName>PCI Practitioner 2020</fullName>
            </value>
            <value>
                <fullName>PCI Practitioner 2021</fullName>
            </value>
            <value>
                <fullName>Payment Security Foundation 2023</fullName>
            </value>
            <value>
                <fullName>Payment Security Masterclass 2023</fullName>
            </value>
            <value>
                <fullName>Payment Security Practitioner 2023</fullName>
            </value>
            <value>
                <fullName>Payment Security V4 Conversion 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>