FLY wire David/force-app/main/default/objects/Contact/fields/Priority_Status__c.field-meta.xml
<CustomField>
    <fullName>Priority_Status__c</fullName>
    <description>Used by Marketo to determine the priority of the person based on a matrix calculation of demographic &amp; behavioral scoring. SAL-4910</description>
    <inlineHelpText>Displays the priority of the person based on a matrix calculation of demographic &amp; behavioral scoring. Priority 1 = Top priority with Priority 4 = Low priority.</inlineHelpText>
    <label>Priority Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority_Status</valueSetName>
    </valueSet>
</CustomField>