FLY wire David/force-app/main/default/objects/Contact/fields/Recruitment_Country__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Country__c</fullName>
    <description>What country does this in-country representative work in and recruit from? SAL-3661</description>
    <inlineHelpText>What country does this in-country representative work in and recruit from?</inlineHelpText>
    <label>Recruitment Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>