FLY wire David/force-app/main/default/objects/Contact/fields/Referred_by_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Indicates which partners sent over this Contact (Independently of whether it currently exist of not)</description>
    <inlineHelpText>Indicates which partners sent over this Contact (Independently of whether it currently exist of not)</inlineHelpText>
    <label>Referred by Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>