FLY wire David/force-app/main/default/objects/Contact/fields/Refund_Contact__c.field-meta.xml
<CustomField>
    <fullName>Refund_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>CHeck if this is the Refund contact for the Account.</inlineHelpText>
    <label>Refund Contact</label>
    <type>Checkbox</type>
</CustomField>