FLY wire David/force-app/main/default/objects/Contact/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <description>Marketo Only field.</description>
    <formula>Account.Relationship_Manager__r.FirstName &amp;&quot; &quot;&amp; Account.Relationship_Manager__r.LastName</formula>
    <inlineHelpText>Marketo Only field.</inlineHelpText>
    <label>Relationship Manager</label>
    <type>Text</type>
</CustomField>