FLY wire David/force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the contact based on title.</description>
    <inlineHelpText>Role of the contact based on title.</inlineHelpText>
    <label>Contact&apos;s Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Contact_Role</valueSetName>
    </valueSet>
</CustomField>