FLY wire David/force-app/main/default/objects/Contact/fields/SAL_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>SAL_Campaign_Touch__c</fullName>
    <label>SWL Campaign Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>