FLY wire David/force-app/main/default/objects/Contact/fields/SAL_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SAL_Timestamp__c</fullName>
    <description>Must keep field to not lose current data. Plan to delete by August 31. Date the person move to SAL status.</description>
    <inlineHelpText>Date the person move to SAL status.</inlineHelpText>
    <label>OBS_SAL Date</label>
    <type>Date</type>
</CustomField>