FLY wire David/force-app/main/default/objects/Contact/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Field created for Marketo Sync</description>
    <inlineHelpText>Engagement score based on interaction with marketing campaigns.</inlineHelpText>
    <label>OBS_Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>