FLY wire David/force-app/main/default/objects/Contact/fields/Send_CDC_Event__c.field-meta.xml
<CustomField>
    <fullName>Send_CDC_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting this field to true will cause updates to this record to trigger the delivery of Change Data Capture (CDC) events.</description>
    <label>Send CDC Event</label>
    <type>Checkbox</type>
</CustomField>