FLY wire David/force-app/main/default/objects/Contact/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <description>WPM Seniority, convert to picklist? Does our Contact Role cover this?</description>
    <inlineHelpText>WPM Contact Seniority</inlineHelpText>
    <label>Seniority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>