FLY wire David/force-app/main/default/objects/Contact/fields/Service_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Service_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Service Alerts</description>
    <inlineHelpText>WPM Service Alerts</inlineHelpText>
    <label>Service Alerts</label>
    <type>Checkbox</type>
</CustomField>