FLY wire David/force-app/main/default/objects/Contact/fields/Service_Desk_Access__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Service Desk Access</description>
    <inlineHelpText>WPM Service Desk Access</inlineHelpText>
    <label>Service Desk Access</label>
    <type>Checkbox</type>
</CustomField>