FLY wire David/force-app/main/default/objects/Contact/fields/Signposting_Role__c.field-meta.xml
<CustomField>
    <fullName>Signposting_Role__c</fullName>
    <description>For &apos;CO Edu&apos; track tasks they need to complete regularly. SAL-2705</description>
    <inlineHelpText>What is the role of this contact in Signposting</inlineHelpText>
    <label>Signposting Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executer</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>