FLY wire David/force-app/main/default/objects/Contact/fields/SQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SQL_Date_Time__c</fullName>
    <description>The date of the SQL Campaign on the person&apos;s record.</description>
    <inlineHelpText>The date of the SQL Campaign on the person&apos;s record.</inlineHelpText>
    <label>SQL Date Time</label>
    <type>DateTime</type>
</CustomField>