FLY wire David/force-app/main/default/objects/Contact/fields/Sub_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Lead_Source__c</fullName>
    <description>Created as a dependent picklist on lead souce.</description>
    <label>Sub Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Lead_Source</valueSetName>
    </valueSet>
</CustomField>