FLY wire David/force-app/main/default/objects/Contact/fields/Subject_Interests__c.field-meta.xml
<CustomField>
    <fullName>Subject_Interests__c</fullName>
    <description>WPM Subject Interests</description>
    <inlineHelpText>WPM Subject Interests</inlineHelpText>
    <label>Subject Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AML SIG Member</fullName>
            </value>
            <value>
                <fullName>Anti Money Laundering (AML)</fullName>
            </value>
            <value>
                <fullName>Card Acquiring</fullName>
            </value>
            <value>
                <fullName>Credit Control</fullName>
            </value>
            <value>
                <fullName>International Payments</fullName>
            </value>
            <value>
                <fullName>Payment Acceptance</fullName>
            </value>
            <value>
                <fullName>Payment Fraud</fullName>
            </value>
            <value>
                <fullName>Payment Security</fullName>
            </value>
            <value>
                <fullName>PS Monthly Meeting</fullName>
            </value>
            <value>
                <fullName>PSMS Cohort Catch Ups</fullName>
            </value>
            <value>
                <fullName>Strategic Thought Leadership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>