FLY wire David/force-app/main/default/objects/Contact/fields/sync_with_marketo__c.field-meta.xml
<CustomField>
    <fullName>sync_with_marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked to True then the lead/contact will sync from SFDC into Marketo. If this field is not checked then leads will NOT pass into Marketo. We will only market to people who are &quot;Opted In&quot; in Marketo.</description>
    <label>Sync with Marketo</label>
    <type>Checkbox</type>
</CustomField>