FLY wire David/force-app/main/default/objects/Contact/fields/TEMP_Acct_Country__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Acct_Country__c</fullName>
    <description>Temp test for syncing with Marketo</description>
    <inlineHelpText>Temp test for syncing with Marketo</inlineHelpText>
    <label>TEMP Acct Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>