FLY wire David/force-app/main/default/objects/Contact/fields/TEMP_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Engagement_Status__c</fullName>
    <description>TEMP new version of the Engagement Status field. Testing emoji with marketo.</description>
    <label>TEMP Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Cool</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>🔥</fullName>
                <isActive>false</isActive>
                <label>🔥</label>
            </value>
            <value>
                <fullName>🔥🔥</fullName>
                <isActive>false</isActive>
                <label>🔥🔥</label>
            </value>
            <value>
                <fullName>🔥🔥🔥</fullName>
                <isActive>false</isActive>
                <label>🔥🔥🔥</label>
            </value>
            <value>
                <fullName>🔥🔥🔥🔥</fullName>
                <isActive>false</isActive>
                <label>🔥🔥🔥🔥</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>