FLY wire David/force-app/main/default/objects/Contact/fields/TEMP_Txt_Engagement__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Txt_Engagement__c</fullName>
    <description>TEMP Txt Engagement field – test for emoji sync with Marketo</description>
    <label>TEMP Txt Engagement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>